<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/signOut"
        android:orderInCategory="30"
        android:title="@string/sign_out_menu_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/editProfile"
        android:orderInCategory="20"
        android:title="@string/edit_profile_menu_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/createPost"
        android:orderInCategory="10"
        android:title="@string/create_post_full_menu_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/follow_requests"
        android:title="Requests"
        app:showAsAction="never" />

    <item
        app:showAsAction="never"
        android:id="@+id/threads"
        android:title="Threads" />

</menu>

