<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/newCommentContainer"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/activity_post_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/userDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/authorImageView"
                    android:layout_width="@dimen/post_list_item_author_image_side"
                    android:layout_height="@dimen/post_list_item_author_image_side"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:src="@drawable/user_thumbnail"
                    android:transitionName="@string/post_author_image_transition_name"
                    app:border="false"
                    app:shadow="true"
                    app:shadow_color="@color/circle_image_shadow"
                    app:shadow_radius="@dimen/circle_image_shadow_radius"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/authorTextView"
                    style="@style/TextAppearance.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:maxLines="1" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/textLayout"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/userDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/intrinsic_padding"
                    android:paddingLeft="@dimen/large_intrinsic_padding"
                    android:paddingRight="@dimen/large_intrinsic_padding"
                    android:textAppearance="@style/TextAppearance.Title"
                    android:visibility="gone" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_detail_image_height"
                android:layout_below="@+id/textLayout"
                android:layout_marginBottom="@dimen/intrinsic_padding"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/progress_bar_size"
                    android:layout_height="@dimen/progress_bar_size"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/postImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/post_image_transition_name"
                    android:visibility="visible"
                    tools:targetApi="lollipop" />

            </RelativeLayout>

            <include
                android:id="@+id/countersContainer"
                layout="@layout/counters_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageContainer"
                android:layout_marginBottom="@dimen/intrinsic_padding"
                android:layout_marginLeft="@dimen/large_intrinsic_padding"
                android:layout_marginRight="@dimen/large_intrinsic_padding" />

            <TextView
                android:id="@+id/commentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/countersContainer"
                android:layout_marginBottom="@dimen/intrinsic_padding"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                android:text="Comments"
                android:textColor="@color/primary_dark_text"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/commentsParentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/commentsLabel"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding">

                <android.support.v4.widget.SwipeRefreshLayout
                    android:id="@+id/swipeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/commentsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/comment_list_item" />

                </android.support.v4.widget.SwipeRefreshLayout>
                <ProgressBar
                    android:id="@+id/commentsProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/warningCommentsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/intrinsic_padding"
                    android:text="@string/internet_connection_failed"
                    android:visibility="gone" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@+id/newCommentContainer"
        android:background="@drawable/top_shadow" />

    <LinearLayout
        android:id="@+id/newCommentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/comment_text_hint"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/new_comment_max_height"
            android:minHeight="@dimen/new_comment_min_height"
            android:padding="@dimen/intrinsic_padding" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/intrinsic_padding"
            android:background="@drawable/send_comment_button_bg"
            android:enabled="false"
            android:minWidth="0dp"
            android:paddingLeft="@dimen/large_intrinsic_padding"
            android:paddingRight="@dimen/large_intrinsic_padding"
            android:text="@string/send_comment_button_label"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>




